--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -138,7 +138,6 @@
     <add-resource type="bool" name="config_multiColorBatteryLed" />
     <bool name="config_multiColorBatteryLed">true</bool>
 
-
     <!-- Default screen brightness setting.
          Must be in the range specified by minimum and maximum. -->
     <integer name="config_screenBrightnessSettingDefault">78</integer>
@@ -323,7 +322,7 @@
         <item>SUPL_ES=0</item>
     </string-array>
 
-    <!-- Hardware keys present on the device, stored as a bit field.
+   <!-- Hardware keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
          of the following keys present:
              1 - Home
@@ -335,7 +334,7 @@
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
-    <integer name="config_deviceHardwareKeys">83</integer>
+    <integer name="config_deviceHardwareKeys">71</integer>
 
     <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
@@ -361,22 +360,19 @@
          This needs to match the constants in
          policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
     -->
-    <integer name="config_longPressOnHomeBehavior">3</integer>
+    <integer name="config_longPressOnHomeBehavior">2</integer>
 
-    <!-- Control the behavior when the user long presses the app switch button.
+    <!-- Control the behavior when the user long presses the menu button.
             0 - Nothing
             1 - Menu key
             2 - Recent apps view in SystemUI
             3 - Launch assist intent
             4 - Voice Search
             5 - In-app Search
-	    6 - Launch camera
-            7 - Turn screen off
-            8 - Last app
          This needs to match the constants in
-         services/core/java/com/android/server/policy/PhoneWindowManager.java
+         policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
     -->
-    <integer name="config_longPressOnAppSwitchBehavior">8</integer>
+    <integer name="config_longPressOnMenuBehavior">3</integer>
 
     <!-- Control the behavior when the user double-taps the home button.
             0 - Nothing
