--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -300,11 +300,16 @@
          phone object irrespective of this config -->
     <bool name="config_switch_phone_on_voice_reg_state_change">false</bool>
 
-    <!-- Flag specifying whether VoLTE is available on device -->
-    <bool name="config_device_volte_available">true</bool>
+    <!-- Flag specifying whether VoLTE & VT is available on device -->
+    <!-- <bool name="config_device_volte_available">true</bool> -->
 
-    <!-- Flag specifying whether VoLTE is available on device -->
-    <bool name="config_device_vt_available">false</bool>
+    <!-- Flag specifying whether VoLTE should be available for carrier: independent of
+         carrier provisioning. If false: hard disabled. If true: then depends on carrier
+         provisioning, availability etc -->
+    <!-- <bool name="config_carrier_volte_available">true</bool> -->
+
+    <!-- Flag specifying whether VoLTE TTY is supported -->
+    <!-- <bool name="config_carrier_volte_tty_supported">false</bool> -->
 
     <!-- Flag specifying whether WFC over IMS is available on device -->
     <bool name="config_device_wfc_ims_available">true</bool>
